[GTK][WPE] DRMDeviceNode needs to be ThreadSafeRefCounted https://bugs.webkit.org/show_bug.cgi?id=275583

Reviewed by Nikolas Zimmermann.

Make DRMDeviceNode ThreadSafeRefCounted and ensure the GBMDevice is
always created in the main thread.

* Source/WebCore/platform/graphics/gbm/DRMDeviceManager.cpp:
(WebCore::DRMDeviceManager::initializeMainDevice):
(WebCore::DRMDeviceManager::deviceNode):
* Source/WebCore/platform/graphics/gbm/DRMDeviceNode.cpp:
(WebCore::DRMDeviceNode::create):
(WebCore::DRMDeviceNode::gbmDevice const):
* Source/WebCore/platform/graphics/gbm/DRMDeviceNode.h:

Canonical link: https://commits.webkit.org/280530@main